--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
+
+html {
+  font-size: 14px;
+}
+
+.p-dropdown {
+  display: flex !important;
+}
